# Junosapp-FastAPI-NuxJS

./: .gitignore  README.md
backend/: .env.exemple  app.py  config.py  criar_tabelas.py  pyproject.toml  requirements.txt
backend/database/: auth.py  configs.py  database.py  deps.py
backend/docker/: .dockerignore  Dockerfile
backend/kubernetes/: deployment.yaml  service.yaml
backend/lib/: filter.py  functions_bras.py  system_bras.py  utils.py
backend/models/: __all__models.py  bras_model.py  erp_model.py  usuario_model.py
backend/routes/: api_erp.py  api_route.py  bras.py  client.py  erp.py  logs.py  tests.py  usuario.py
backend/schemas/: bras_schema.py  erp_schema.py  usuario_schema.py
frontend/: .eslintrc.js  nuxt.config.js  package-lock.json  package.json
frontend/components/: CompButtonAction.vue  CompButtonActionPppoe.vue  CompCardHistoryClient.vue  CompCardImg.vue  CompCardInfo.vue  CompCardItem.vue  CompCardMenuEsquerdo.vue  CompCardPerfil.vue  CompCarrosel.vue  CompLineChart.js  CompTextFilterSearchClient.vue  CompTextFilterSearchClientLog.vue
frontend/components/Admin/: CompCadastrarDispositivo.vue  CompCadastrarRadius.vue  CompCadastrarUsuario.vue  CompCardMenuEsquerdoAdmin.vue  CompEditarDispositivo.vue  CompEditarRadius.vue  CompEditarUsuario.vue  CompTabelaDispositivo.vue  CompTabelaRadius.vue  CompTabelaUsuario.vue
frontend/docker/: Dockerfile
frontend/layouts/: default.vue  error.vue
frontend/pages/: cadastro.vue  home.vue  index.vue  log.vue  login.vue
frontend/pages/admin/: index.vue
frontend/store/: apierp.js  logs.js
(+22 files in other folders)
